Add movement of library calls to after path has been modified

--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "Path('/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_clustering.py')"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 337,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 339,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 341,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 342,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 343,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 344,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +839,7 @@
     "                    hyper_params = format_hyperparams(step_param_meta)\n",
     "                    flow_file.write(f\"{ind}{ind}{ind}hyperparameters={{\\n\")\n",
     "                    for key, val in hyper_params.items():\n",
-    "                        flow_file.write(f'{ind}{ind}{ind}{ind}\"{key}\", {val},\\n')\n",
+    "                        flow_file.write(f'{ind}{ind}{ind}{ind}\"{key}\": {val},\\n')\n",
     "                    flow_file.write(f\"{ind}{ind}{ind}}},\\n\")\n",
     "                flow_file.write(f'{ind}{ind}{ind}instance_type=\"ml.m5.xlarge\",\\n')\n",
     "                flow_file.write(f\"{ind}{ind}{ind}instance_count=1,\\n\")\n",
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,7 +962,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 352,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fq_module_name = f\"{lib_name}.{module_name}\"\n",
+    "extract_param_meta(fq_module_name, params)\n",
+    "# TODO needs to be step specific\n",
+    "# pass these in\n",
+    "module_path = Path(lib_path(), lib_name, f\"{module_name.replace('.', '/')}.py\")\n",
+    "    \n",
+    "with open(module_path) as module_file:\n",
+    "    module_lines = module_file.readlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -991,12 +1007,21 @@
     "\n",
     "    with open(module_path) as module_file:\n",
     "        module_lines = module_file.readlines()\n",
+    "    lib_refs = []\n",
+    "    lines = []\n",
+    "    for line in module_lines:\n",
+    "        if line.startswith('from ..'): \n",
+    "            lib_refs.append(line)\n",
+    "        else:\n",
+    "            lines.append(line)\n",
+    "    lib_refs = [l.replace('..', f\"{lib_name}.\") for l in library_refs]\n",
+    "\n",
     "    for step in steps:\n",
     "        sm_module_path = Path(str(flow_path).replace(\".py\", f\"_{step.name}.py\"))\n",
     "        with open(sm_module_path, \"w\") as sm_module_file:\n",
-    "            sm_module_file.write(\"\".join(module_lines))\n",
+    "            sm_module_file.write(\"\".join(lines))\n",
     "            sm_module_file.write(\"\\n\\n# SCIFLOW GENERATED FROM THIS POINT\\n\")\n",
-    "            write_boilerplate_funcs(sm_module_file, ind)\n",
+    "            write_boilerplate_funcs(lib_refs, sm_module_file, ind)\n",
     "            sm_module_file.write(\"\\n\")\n",
     "            sm_module_file.write(\"\\n\")\n",
     "\n",
@@ -1030,6 +1055,7 @@
     "            sm_module_file.write(f'{ind}save_results(\"/opt/ml/processing\", results)\\n')\n",
     "            sm_module_file.write(f\"\\n\")\n",
     "            sm_module_file.write(f\"def parse_args():\\n\")\n",
+    "            sm_module_file.write(f\"{ind}import argparse\\n\")\n",
     "            sm_module_file.write(\n",
     "                f\"{ind}parser = argparse.ArgumentParser(description=__doc__)\\n\"\n",
     "            )\n",
@@ -1041,6 +1067,7 @@
     "                sm_module_file.write(\n",
     "                    f'{ind}parser.add_argument(f\"--{arg}\", required=True)\\n'\n",
     "                )\n",
+    "            sm_module_file.write(\"return parser.parse_args()\")\n",
     "            sm_module_file.write(\"\\n\")\n",
     "            sm_module_file.write(f'if __name__ == \"__main__\":\\n')\n",
     "            sm_module_file.write(f\"{ind}args = parse_args()\\n\")\n",
@@ -1050,11 +1077,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 366,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_boilerplate_funcs(sm_module_file, ind):\n",
+    "def write_boilerplate_funcs(lib_refs, sm_module_file, ind):\n",
     "    sm_module_file.write(\"\\n\")\n",
     "    sm_module_file.write(\n",
     "        f\"def download_directory(bucket_name: str, remote_key: str, local_dir: str):\\n\"\n",
@@ -1086,21 +1113,21 @@
     "        f\"{ind}download_directory(os.environ['SCIFLOW_BUCKET'], remote_key, package_dir)\\n\"\n",
     "    )\n",
     "    sm_module_file.write(f\"{ind}sys.path.append(lib_dir)\\n\")\n",
-    "    # remote_key = f'test-clustering/pipeline-2022-03-24-09-24-21-978/code/{lib_name}'\n",
+    "    sm_module_file.write(\"\".join([f\"{ind}{lr}\" for lr in lib_refs]))\n",
     "    sm_module_file.write(\"\\n\")\n",
     "\n",
     "    sm_module_file.write(f\"def save_results(save_dir, results):\\n\")\n",
     "    sm_module_file.write(f\"{ind}import pandas as pd\\n\")\n",
     "    sm_module_file.write(f\"{ind}import pickle\\n\")\n",
     "    sm_module_file.write(\n",
-    "        f\"{ind}{ind}if isinstance(value, pd.Series) or isinstance(value, pd.DataFrame):\\n\"\n",
+    "        f\"{ind}if isinstance(value, pd.Series) or isinstance(value, pd.DataFrame):\\n\"\n",
     "    )\n",
     "    sm_module_file.write(\n",
-    "        f'{ind}{ind}{ind}pd.to_parquet(f\"{{save_dir}}/{{key}}/{{key}}\")\\n'\n",
+    "        f'{ind}{ind}pd.to_parquet(f\"{{save_dir}}/{{key}}/{{key}}\")\\n'\n",
     "    )\n",
-    "    sm_module_file.write(f\"{ind}{ind}else:\\n\")\n",
+    "    sm_module_file.write(f\"{ind}else:\\n\")\n",
     "    sm_module_file.write(\n",
-    "        f'{ind}{ind}{ind}pickle.dump(f\"{{save_dir}}/{{key}}/{{key}}\")\\n'\n",
+    "        f'{ind}{ind}pickle.dump(f\"{{save_dir}}/{{key}}/{{key}}\")\\n'\n",
     "    )\n",
     "    # TODO log artifacts & metrics\n",
     "    sm_module_file.write(\"\\n\")\n",
@@ -1119,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 367,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 368,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1138,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 369,
    "metadata": {},
    "outputs": [
     {
@@ -1157,34 +1184,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Add Additional Code to Processing Jobs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 145,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sciflow.utils import lib_path\n",
-    "# lib_path()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Add requirements.txt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 363,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate if it doesn't exist\n",
-    "# Copy to flow directory"
+    "# Copy to flow directory\n",
+    "# Add as processinginput"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        self.s3_client.upload_file(\"requirements.txt\", self.bucket, f\"{self.s3_prefix}/requirements.txt\")\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sciflow.packaging import determine_dependencies\n",
+    "ind = '    '\n",
+    "if not Path(lib_path(), 'requirements.txt').exists():\n",
+    "    determine_dependencies(generated_pip_file_name='requirements.txt')\n",
+    "\n",
+    "# flow_file.write(\n",
+    "#     f'{ind}{ind}self.s3_client.upload_file(\"requirements.txt\", self.bucket, f\"{{self.s3_prefix}}/requirements.txt\")\\n'\n",
+    "# )\n",
+    "\n",
+    "print(f'{ind}{ind}self.s3_client.upload_file(\"requirements.txt\", self.bucket, f\"{{self.s3_prefix}}/requirements.txt\")\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Path('/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/requirements.txt')"
+      ]
+     },
+     "execution_count": 365,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import shutil\n",
+    "\n",
+    "shutil.copyfile( Path(lib_path(), 'requirements.txt'),  Path(lib_path(), get_config().flows_path, \"sagemaker\", 'requirements.txt'))"
    ]
   },
   {
