[WIP] adding requirements.txt call

--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1211,
+   "execution_count": 1562,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1212,
+   "execution_count": 1563,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1213,
+   "execution_count": 1564,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1214,
+   "execution_count": 1565,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1215,
+   "execution_count": 1566,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1216,
+   "execution_count": 1567,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1217,
+   "execution_count": 1568,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "Path('/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_clustering.py')"
       ]
      },
-     "execution_count": 1217,
+     "execution_count": 1568,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1218,
+   "execution_count": 1569,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1219,
+   "execution_count": 1570,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1220,
+   "execution_count": 1571,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1221,
+   "execution_count": 1572,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1222,
+   "execution_count": 1573,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1223,
+   "execution_count": 1574,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1224,
+   "execution_count": 1575,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,8 +391,9 @@
     "            )\n",
     "\n",
     "        modules_dir = Path(lib_path(), get_config().lib_name)\n",
+    "        flow_file.write(f\"{ind}{ind}self.lib_code_key = f\\\"{{self.s3_prefix}}/code/{get_config().lib_name}\\\"\\n\")\n",
     "        flow_file.write(\n",
-    "            f'{ind}{ind}upload_directory(self.s3_client, \"{modules_dir}\", self.bucket, f\"{{self.s3_prefix}}/code/{get_config().lib_name}\")\\n'\n",
+    "            f\"{ind}{ind}upload_directory(self.s3_client, \\\"{modules_dir}\\\", self.bucket, self.lib_code_key)\\n\"\n",
     "        )\n",
     "        flow_file.write(\"\\n\")\n",
     "        flow_file.write(f\"{ind}{ind}pipeline = self.get_pipeline()\\n\")\n",
@@ -411,14 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1225,
+   "execution_count": 1576,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1226,
+   "execution_count": 1577,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1227,
+   "execution_count": 1578,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1228,
+   "execution_count": 1579,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1229,
+   "execution_count": 1580,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1230,
+   "execution_count": 1581,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1231,
+   "execution_count": 1582,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -605,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1232,
+   "execution_count": 1583,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1233,
+   "execution_count": 1584,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1234,
+   "execution_count": 1585,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1235,
+   "execution_count": 1586,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -706,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1236,
+   "execution_count": 1587,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +759,7 @@
     "                (\"--remote_key\", \"self.lib_code_key\")\n",
     "            ]\n",
     "            flow_file.write(f\"{ind}{ind}{ind}inputs = [\\n\")\n",
-    "            flow_file.write(f\"{ind}{ind}{ind}{ind}ProcessingInput(source=f\\\"{{self.s3_prefix}}/requirements.txt\\\", destination=\\\"/opt/ml/processing/requirements/requirements.txt\\\"),\\n\")\n",
+    "            flow_file.write(f\"{ind}{ind}{ind}{ind}ProcessingInput(source=f\\\"{{self.flow_s3_uri}}/requirements.txt\\\", destination=\\\"/opt/ml/processing/requirements\\\"),\\n\")\n",
     "                \n",
     "            if len(step_vars) > 0:\n",
     "                step_param_meta = {k: param_meta[k] for k in step_vars[\"step_input\"]}\n",
@@ -904,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1237,
+   "execution_count": 1588,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1238,
+   "execution_count": 1589,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1239,
+   "execution_count": 1590,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1240,
+   "execution_count": 1591,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -979,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1241,
+   "execution_count": 1592,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -995,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1242,
+   "execution_count": 1593,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1038,8 @@
     "            sm_module_file.write(\"import pandas as pd\\n\")\n",
     "            sm_module_file.write(\"import pickle\\n\")\n",
     "            sm_module_file.write(\"from pathlib import Path\\n\")\n",
-    "            sm_module_file.write(\"import argparse\")\n",
+    "            sm_module_file.write(\"import argparse\\n\")\n",
+    "            sm_module_file.write(\"import subprocess\\n\")\n",
     "            sm_module_file.write(\"\\n\")\n",
     "            write_boilerplate_funcs(lib_refs, sm_module_file, ind)\n",
     "            sm_module_file.write(\"\\n\")\n",
@@ -1061,17 +1056,17 @@
     "            sm_module_file.write(f\"\\n\")\n",
     "            if is_processing_step(step):\n",
     "                sm_module_file.write(\n",
-    "                    f\"{ind}has_additional_dependencies = Path('requirements.txt').exists()\\n\"\n",
+    "                    f\"{ind}has_additional_dependencies = Path(\\\"/opt/ml/processing/requirements/requirements.txt\\\").exists()\\n\"\n",
     "                )\n",
     "                sm_module_file.write(f\"{ind}if has_additional_dependencies:\\n\")\n",
     "                sm_module_file.write(\n",
-    "                    f\"{ind}{ind}logger.info('Installing additional dependencies from requirements.txt')\\n\"\n",
+    "                    f\"{ind}{ind}print('Installing additional dependencies from requirements.txt')\\n\"\n",
     "                )\n",
     "                sm_module_file.write(\n",
-    "                    f'{ind}{ind}subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"-r\", \"requirements.txt\"])\\n'\n",
+    "                    f'{ind}{ind}subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"-r\", \"/opt/ml/processing/requirements/requirements.txt\"])\\n'\n",
     "                )\n",
     "                sm_module_file.write(\n",
-    "                    f'{ind}{ind}logger.debug(\"Installed additional dependencies\")\\n'\n",
+    "                    f'{ind}{ind}print(\"Installed additional dependencies\")\\n'\n",
     "                )\n",
     "            args = [\"lib_name\", \"remote_key\"]\n",
     "            if step.name in steps_param_meta:\n",
@@ -1111,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1243,
+   "execution_count": 1594,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1175,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1244,
+   "execution_count": 1595,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1245,
+   "execution_count": 1596,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1246,
+   "execution_count": 1597,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1247,
+   "execution_count": 1598,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1248,
+   "execution_count": 1599,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1250,11 +1245,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1249,
+   "execution_count": 1600,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import shutil\n",
+    "# import shutil\n",
     "\n"
    ]
   }
