Added temp artifact save to test_clustering. [WIP] generated something/preprocess/fit working

--- a/nbs/to_sagemaker.ipynb
+++ b/nbs/to_sagemaker.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2647,
+   "execution_count": 2950,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2648,
+   "execution_count": 2951,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2649,
+   "execution_count": 2952,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2650,
+   "execution_count": 2953,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2651,
+   "execution_count": 2954,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2652,
+   "execution_count": 2955,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2653,
+   "execution_count": 2956,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
        "Path('/home/sagemaker-user/git/sciflow/nbs/test/flows/sagemaker/test_clustering.py')"
       ]
      },
-     "execution_count": 2653,
+     "execution_count": 2956,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2654,
+   "execution_count": 2957,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2655,
+   "execution_count": 2958,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2656,
+   "execution_count": 2959,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2657,
+   "execution_count": 2960,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2658,
+   "execution_count": 2961,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2659,
+   "execution_count": 2962,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2660,
+   "execution_count": 2963,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2661,
+   "execution_count": 2964,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2662,
+   "execution_count": 2965,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2663,
+   "execution_count": 2966,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2664,
+   "execution_count": 2967,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2665,
+   "execution_count": 2968,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2666,
+   "execution_count": 2969,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2667,
+   "execution_count": 2970,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2668,
+   "execution_count": 2971,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2669,
+   "execution_count": 2972,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2670,
+   "execution_count": 2973,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2671,
+   "execution_count": 2974,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2672,
+   "execution_count": 2975,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -849,6 +849,9 @@
     "                flow_file.write(\n",
     "                    f'{ind}{ind}{ind}entry_point=\"{module_local_name}_{step.name}.py\",\\n'\n",
     "                )\n",
+    "                flow_file.write(\n",
+    "                    f'{ind}{ind}{ind}source_dir=\".\",\\n'\n",
+    "                )\n",
     "                # Repeated code - refactor\n",
     "                step_param_meta = {k: param_meta[k] for k in step_vars[\"step_input\"]}\n",
     "                steps_param_meta[step.name] = step_param_meta\n",
@@ -907,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2673,
+   "execution_count": 2976,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2674,
+   "execution_count": 2977,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2675,
+   "execution_count": 2978,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2676,
+   "execution_count": 2979,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2677,
+   "execution_count": 2980,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2678,
+   "execution_count": 2981,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,17 +1057,11 @@
     "            write_preamble(step, lib_refs, sm_module_file, ind)\n",
     "            sm_module_file.write(\"\\n\")\n",
     "            sm_module_file.write(\"\\n\")\n",
-    "            if step.name in steps_param_meta:\n",
+    "            if step.name in steps_param_meta and len(steps_param_meta[step.name]) > 0:\n",
     "                step_args = list(steps_param_meta[step.name].keys())\n",
-    "                if step.name == 'evaluate':\n",
-    "                    print(steps_param_meta[step.name])\n",
-    "                sm_module_file.write(\n",
-    "                    f\"def main(lib_name, remote_key, {', '.join(step_args)}):\\n\"\n",
-    "                )\n",
+    "                sm_module_file.write(f\"def main(lib_name, remote_key, {', '.join(step_args)}):\\n\")\n",
     "            else:\n",
-    "                sm_module_file.write(\n",
-    "                    f\"def main(lib_name, remote_key):\\n\"\n",
-    "                )\n",
+    "                sm_module_file.write(f\"def main(lib_name, remote_key):\\n\")\n",
     "            if is_processing_step(step):\n",
     "                sm_module_file.write(\n",
     "                    f\"{ind}has_additional_dependencies = Path(\\\"/opt/ml/processing/requirements/requirements.txt\\\").exists()\\n\"\n",
@@ -1079,6 +1076,29 @@
     "                sm_module_file.write(\n",
     "                    f'{ind}{ind}print(\"Installed additional dependencies\")\\n'\n",
     "                )\n",
+    "            \n",
+    "            if is_processing_step(step) and 'step_train_vars' in steps_vars[step.name] and len(steps_vars[step.name]['step_train_vars']) > 0:\n",
+    "                sm_module_file.write(f\"\\n\")\n",
+    "                sm_module_file.write(f\"{ind}import tarfile\\n\")\n",
+    "                sm_module_file.write(f\"{ind}model_path = f\\\"/opt/ml/processing/input/model/model.tar.gz\\\"\\n\")\n",
+    "                sm_module_file.write(f\"{ind}with tarfile.open(model_path) as tar:\\n\")\n",
+    "                sm_module_file.write(f\"{ind}{ind}tar.extractall(path=\\\".\\\")\\n\")\n",
+    "                sm_module_file.write(f\"\\n\")\n",
+    "            \n",
+    "            sm_module_file.write(f\"{ind}add_lib_to_pythonpath(lib_name, remote_key)\\n\")\n",
+    "            \n",
+    "            if is_processing_step(step):\n",
+    "                if 'step_train_vars' in steps_vars[step.name] and len(steps_vars[step.name]['step_train_vars']) >0:\n",
+    "                    for step_train_var in steps_vars[step.name]['step_train_vars']:\n",
+    "                        sm_module_file.write(f\"{ind}{step_train_var} = load_result(\\\".\\\", \\\"{step_train_var}\\\")\\n\")\n",
+    "                if 'step_proc_vars' in steps_vars[step.name] and len(steps_vars[step.name]['step_proc_vars']) >0:\n",
+    "                    for step_train_var in steps_vars[step.name]['step_train_vars']:\n",
+    "                        sm_module_file.write(f\"{ind}{step_train_var} = load_result(\\\"/opt/ml/processing/input\\\", \\\"{step_train_var}\\\")\\n\") \n",
+    "            elif is_train_step(step):\n",
+    "                if 'step_proc_vars' in steps_vars[step.name] and len(steps_vars[step.name]['step_proc_vars']) >0:\n",
+    "                    for step_proc_var in steps_vars[step.name]['step_proc_vars']:\n",
+    "                        sm_module_file.write(f\"{ind}{step_proc_var} = load_result(\\\"/opt/ml/input/data/documents\\\", \\\"{step_proc_var}\\\")\\n\") \n",
+    "                    \n",
     "            args = [\"lib_name\", \"remote_key\"]\n",
     "            \n",
     "            has_step_var = False,\n",
@@ -1086,20 +1106,18 @@
     "            step_func_args = []\n",
     "            if len(steps_vars[step.name]) > 0:\n",
     "                step_vars = steps_vars[step.name]['step_proc_vars'] + steps_vars[step.name]['step_train_vars']\n",
+    "                # load result for each step var\n",
     "                step_func_args.extend(step_vars)\n",
-    "                print(step.name, step_vars)\n",
     "            if step.name in steps_param_meta and len(steps_param_meta[step.name]) > 0:\n",
     "                step_params = format_args(steps_param_meta[step.name]).replace(' ', '').split(',')\n",
     "                args.extend(step_args)\n",
     "                step_func_args.extend(step_params)\n",
-    "                print(step.name, step_params)\n",
     "            if len(step_func_args) > 0:\n",
     "                step_func_args = ','.join([f\"{a.replace('int', '').replace('float', '').strip('()')}={a}\" for a in step_func_args])\n",
     "                sm_module_file.write(f\"{ind}results = {step.name}({step_func_args})\\n\")\n",
     "            else:\n",
     "                sm_module_file.write(f\"{ind}results = {step.name}()\\n\")\n",
     "            if is_processing_step(step):\n",
-    "                sm_module_file.write(f\"{ind}add_lib_to_pythonpath(lib_name, remote_key)\\n\")\n",
     "                sm_module_file.write(f\"{ind}save_results(\\\"/opt/ml/processing/output\\\", results)\\n\")\n",
     "            elif is_train_step(step):\n",
     "                sm_module_file.write(f\"{ind}save_results(\\\"/opt/ml/model\\\", results)\\n\")\n",
@@ -1128,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2679,
+   "execution_count": 2982,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2680,
+   "execution_count": 2983,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2681,
+   "execution_count": 2984,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,20 +1235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2682,
+   "execution_count": 2985,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Converted test_clustering.ipynb to TestClusteringPipeline in: test_clustering.py\n",
-      "preprocess []\n",
-      "preprocess ['model_level', 'min_date', 'int(traffic_percent)']\n",
-      "fit ['documents']\n",
-      "fit ['int(workers)']\n",
-      "{}\n",
-      "evaluate ['model']\n"
+      "Converted test_clustering.ipynb to TestClusteringPipeline in: test_clustering.py\n"
      ]
     }
    ],
@@ -1247,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2683,
+   "execution_count": 2986,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2684,
+   "execution_count": 2987,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2685,
+   "execution_count": 2988,
    "metadata": {},
    "outputs": [],
    "source": [
