Complete code genration of Sagemkark pipeline  from notebook :-)

--- a/nbs/test/test_clustering.ipynb
+++ b/nbs/test/test_clustering.ipynb
@@ -59,8 +59,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "# TODO bring back in library calls\n",
-    "from sciflow.utils import lib_path"
+    "# TODO bring back in library calls"
    ]
   },
   {
@@ -416,7 +415,9 @@
     "    )\n",
     "    # You can add artifacts in a step that will be saved to block storage. Add the paths to the file on the local filesystem\n",
     "    # and the artifact will be uploaded to remote storage.\n",
-    "    sample_df = pd.DataFrame({'a': model.get_topic_sizes()[0], 'b': model.get_topic_sizes()[1]})\n",
+    "    sample_df = pd.DataFrame(\n",
+    "        {\"a\": model.get_topic_sizes()[0], \"b\": model.get_topic_sizes()[1]}\n",
+    "    )\n",
     "    sample_df.to_csv(\"/tmp/dataframe_artifact.csv\", index=False)\n",
     "    artifacts = [\"/tmp/dataframe_artifact.csv\"]\n",
     "    # You can add step metrics too this time just add a list of 3-tuples where tuple order = (name, value, step)\n",
